update to test surefire with java 12